[project]
name = "examples"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "carmine", email = "cdimascio@gmail.com" }
]
dependencies = [
    "langchain-s3-text-loaders>=0.8.2"
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false